tests/errors/err_non_sequential.bas
100 PRINT "FIRST"
50 PRINT "SECOND"
200 PRINT "THIRD"
